--- a/catalog.html
+++ b/catalog.html
@@ -67,8 +67,9 @@
   </div>
 </header>
 <main>
-  <h1>Title</h1>
+  <h1 class="visually-hidden">Каталог товаров сайта</h1>
   <article class="breadcrumbs">
+    <h2 class="visually-hidden">Где я сейчас?</h2>
     <ul class="breadcrumbs-list">
       <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Главная</a></li>
       <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Каталог товаров</a></li>
@@ -96,7 +97,8 @@
     <div class="products__items">
       <div class="container">
         <section class="products__items-filter">
-          <form action="">
+          <h2 class="visually-hidden">Подбор товаров по критериям</h2>
+          <form action="#">
             <fieldset>
               <legend class="form-legend">Стоимость</legend>
               <div class="range-control">
@@ -116,7 +118,6 @@
             <fieldset>
               <legend class="form-legend">Цвет</legend>
               <ul class="products__items-filter-colors">
-                <!-- все ли тут правильно по БЭМ и нужно ли было заменять это на список вместо input + label обернутые в div.form-control ? -->
                 <li class="products__items-filter-color">
                   <input class="visually-hidden products__items-filter-color-input" id="color_1" type="checkbox" name="filter_color_1">
                   <label class="products__items-filter-color-label" for="color_1">Черный</label>
@@ -154,7 +155,9 @@
           </form>
         </section>
         <section class="products__items-container">
+          <h2 class="visually-hidden">Каталог продукции</h2>
           <article class="products__items-item">
+            <h2 class="visually-hidden">Любительская селфи-палка</h2>
             <figure class="products__items-item-container">
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <figcaption class="products__items-item-description">
@@ -168,6 +171,7 @@
             </div>
           </article>
           <article class="products__items-item">
+            <h2 class="visually-hidden">Профессиональная селфи-палка</h2>
             <figure class="products__items-item-container">
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <figcaption class="products__items-item-description">
@@ -181,6 +185,7 @@
             </div>
           </article>
           <article class="products__items-item">
+            <h2 class="visually-hidden">Непотопляемая селфи-палка</h2>
             <figure class="products__items-item-container">
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               <figcaption class="products__items-item-description">
@@ -194,6 +199,7 @@
             </div>
           </article>
           <article class="products__items-item products__items-item_new">
+            <h2 class="visually-hidden">Селфи-палка «Следуй за мной»</h2>
             <figure class="products__items-item-container">
               <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               <figcaption class="products__items-item-description">
@@ -207,6 +213,7 @@
             </div>
           </article>
           <section class="pagination">
+            <h2 class="visually-hidden">Постраничная навигация</h2>
             <ul class="pagination__list">
               <li class="pagination__item">
                 <a href="#" class="pagination__item-link pagination__item-link_btn-back">Назад</a>
@@ -236,7 +243,7 @@
       <a href="#" class="logotype page-footer__info-logotype">Device</a>
       <address class="page-footer__info-address">г. Москва, ул. Строителей, 15</address>
     </div>
-    <nav class="page-footer__menu">
+    <div class="page-footer__menu">
       <ul class="page-footer__menu-list">
         <li class="page-footer__menu-item"><a href="#" class="page-footer__menu-link">Доставка</a></li>
         <li class="page-footer__menu-item"><a href="#" class="page-footer__menu-link">Гарантия</a></li>
@@ -247,7 +254,7 @@
         <a href="#" class="btn page-footer__social-btn page-footer__social-btn_instagran"></a>
         <a href="#" class="btn page-footer__social-btn page-footer__social-btn_ftwitter"></a>
       </div>
-    </nav>
+    </div>
     <div class="page-footer__profile">
       <ul class="page-footer__profile-list">
         <li class="page-footer__profile-item">
@@ -274,7 +281,7 @@
   </div>
 </footer>
 <div class="modal-window modal-feedback">
-  <button class="modal-feedback__close">X</button>
+  <button class="modal-feedback__close">Закрыть</button>
   <h2 class="visually-hidden modal-map__container-title">Как с нами связаться?</h2>
   <form method="post">
     <div class="modal-feedback__user-data">
@@ -288,9 +295,9 @@
       </label>
     </div>
     <div class="modal-feedback__message">
-      <textarea name="message" id="" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+      <textarea name="message" placeholder="В свободной форме"></textarea>
     </div>
-    <input type="submit" name="Отправить">
+    <input type="submit" value="Отправить">
   </form>
 </div>
 <div class="modal-window modal-map">
