--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
-<header class="page-header">
-  <div class="container">
+<header class="page-header container">
+  <div class="page-header-wrapper">
     <a href="#" class="logotype page-header__logo">Device</a>
     <div class="page-header__actions">
+      <!--
+      Нужно дополнительно форму тут обернуть?
+      -->
       <form action="#" class="search-form page-header__search">
-        <input type="search" class="search-form__field" placeholder="Поиск по сайту">
-        <button class="search-form__send">Найти</button>
+        <p class="search-form__control">
+          <input type="search" class="search-form__field" placeholder="Поиск по сайту">
+        </p>
+        <input type="submit" class="search-form__send" value="Найти">
       </form>
       <ul class="page-header__profile">
         <li class="page-header__profile-item">
@@ -28,54 +33,54 @@
           <a href="#" class="page-header__options-link">Корзина</a>
         </li>
       </ul>
-      <nav class="page-header__nav">
-        <ul class="page-header__nav-list">
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Каталог товаров</a>
-            <ul class="page-header__nav-goods">
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Умные часы</a>
-              </li>
-              <li class="page-header__nav-goods-item">
-                <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
-              </li>
-            </ul>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Доставка</a>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Гарантия</a>
-          </li>
-          <li class="page-header__nav-item">
-            <a href="#" class="page-header__nav-link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
     </div>
+    <nav class="page-header__nav">
+      <ul class="page-header__nav-list">
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Каталог товаров</a>
+          <ul class="page-header__nav-goods">
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Умные часы</a>
+            </li>
+            <li class="page-header__nav-goods-item">
+              <a class="page-header__nav-goods-link" href="#">Экшн-камеры</a>
+            </li>
+          </ul>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Доставка</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Гарантия</a>
+        </li>
+        <li class="page-header__nav-item">
+          <a href="#" class="page-header__nav-link">Контакты</a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </header>
 <main>
-  <div class="container">
-    <section class="slider-promo">
-      <h2 class="visually-hidden">Лучшие товары 2017!</h2>
-      <article class="slider-promo__item">
-        <h2 class="visually-hidden">Самая длинная селфи палка</h2>
-        <figure class="slider-promo__item-container">
-          <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи" class="slider-promo__item-photo">
-        </figure>
+  <section class="slider-promo container">
+    <h2 class="visually-hidden">Лучшие товары 2017!</h2>
+    <article class="slider-promo__item">
+      <h2 class="visually-hidden">Самая длинная селфи палка</h2>
+      <figure class="slider-promo__item-photo-container">
+        <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи" class="slider-promo__item-photo">
+      </figure>
+      <div class="slider-promo__item-main-content">
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Делай селфи,
             как Бен Стиллер!</h2>
@@ -99,12 +104,14 @@
             <p class="slider-promo__item-specification-name">Материал</p>
           </div>
         </div>
-      </article>
-      <article class="slider-promo__item">
-        <h2 class="visually-hidden">Мотивирующие фитнес-браслеты</h2>
-        <figure class="slider-promo__item-container">
-          <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнеc-браслеты" class="slider-promo__item-photo">
-        </figure>
+      </div>
+    </article>
+    <article class="slider-promo__item">
+      <h2 class="visually-hidden">Мотивирующие фитнес-браслеты</h2>
+      <figure class="slider-promo__item-photo-container">
+        <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнеc-браслеты" class="slider-promo__item-photo">
+      </figure>
+      <div class="slider-promo__item-main-content">
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Худеем
             правильно!</h2>
@@ -114,18 +121,20 @@
           </p>
           <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
         </section>
-        <div class="slider-promo__item-specification">
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">48 часов</p>
-            <p class="slider-promo__item-specification-name">Без подзарядки</p>
-          </div>
+      </div>
+      <div class="slider-promo__item-specification">
+        <div class="slider-promo__item-specification-box">
+          <p class="slider-promo__item-specification-value">48 часов</p>
+          <p class="slider-promo__item-specification-name">Без подзарядки</p>
         </div>
-      </article>
-      <article class="slider-promo__item">
-        <h2 class="visually-hidden">Квадрокоптер</h2>
-        <figure class="slider-promo__item-container">
-          <img src="img/slider-3.png" width="526" height="334" alt="обычный, на первый взгляд, квадрокоптер" class="slider-promo__item-photo">
-        </figure>
+      </div>
+    </article>
+    <article class="slider-promo__item">
+      <h2 class="visually-hidden">Квадрокоптер</h2>
+      <figure class="slider-promo__item-container">
+        <img src="img/slider-3.png" width="526" height="334" alt="обычный, на первый взгляд, квадрокоптер" class="slider-promo__item-photo">
+      </figure>
+      <div class="slider-promo__item-main-content">
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Порхает как бабочка,
             жалит как пчела!</h2>
@@ -135,27 +144,29 @@
           </p>
           <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
         </section>
-        <div class="slider-promo__item-specification">
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">800 м</p>
-            <p class="slider-promo__item-specification-name">Дальность полета</p>
-          </div>
-          <div class="slider-promo__item-specification-box">
-            <p class="slider-promo__item-specification-value">50 м</p>
-            <p class="slider-promo__item-specification-name">Радиус поражения</p>
-          </div>
-        </div>
-      </article>
-      <div class="slider-promo__controls">
-        <!-- нормально на радио с лейблом завесить их тут просто или еще нужно дополнительно обернуть в p или div эти label + input? -->
-        <label for="promo-slide-1"></label>
-        <input class="slider-promo__controls-control" id="promo-slide-1" type="radio" name="promo-slide">
-        <label for="promo-slide-2"></label>
-        <input class="slider-promo__controls-control" id="promo-slide-2" type="radio" name="promo-slide">
-        <label for="promo-slide-3"></label>
-        <input class="slider-promo__controls-control" id="promo-slide-3" type="radio" name="promo-slide">
       </div>
-    </section>
+      <div class="slider-promo__item-specification">
+        <div class="slider-promo__item-specification-box">
+          <p class="slider-promo__item-specification-value">800 м</p>
+          <p class="slider-promo__item-specification-name">Дальность полета</p>
+        </div>
+        <div class="slider-promo__item-specification-box">
+          <p class="slider-promo__item-specification-value">50 м</p>
+          <p class="slider-promo__item-specification-name">Радиус поражения</p>
+        </div>
+      </div>
+    </article>
+    <div class="slider-promo__controls">
+      <!-- нормально на радио с лейблом завесить их тут просто или еще нужно дополнительно обернуть в p или div эти label + input? -->
+      <label for="promo-slide-1"></label>
+      <input class="slider-promo__controls-control" id="promo-slide-1" type="radio" name="promo-slide">
+      <label for="promo-slide-2"></label>
+      <input class="slider-promo__controls-control" id="promo-slide-2" type="radio" name="promo-slide">
+      <label for="promo-slide-3"></label>
+      <input class="slider-promo__controls-control" id="promo-slide-3" type="radio" name="promo-slide">
+    </div>
+  </section>
+  <div class="container">
     <section class="categories">
       <h2 class="visually-hidden">Категории товаров</h2>
       <article class="categories__box">
